this should fix the icon sizes so that the site renders properly on mobile devices

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -63,7 +63,7 @@
         justify-items: center;
 
         img {
-            max-width: 60px;
+            max-width: 50px;
         }
 
         .vk_image {
